尝试修正平移引起的误触